digiKam 6.2.0 - Release date: 2019-06-??

*****************************************************************************************************
NEW FEATURES:


*****************************************************************************************************
BUGFIXES:

001 ==> 279216 - "Resize image" feature is missing some useful options [patch].
002 ==> 