@@ -8,4 +8,5 @@ NEW FEATURES:
 BUGFIXES:
 
 001 ==> 279216 - "Resize image" feature is missing some useful options [patch].
-002 ==> 
+002 ==> 406581 - "No such album" when dragging duplicated Tag to merge them.
+003 ==> 
